# Emoji-Encoder-Bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.registry  README.md  app.json  docker-compose.yml  railway.toml  render.yaml
.do/: app.yaml
.github/workflows/: docker-publish.yml
src/: main.rs
src/handlers/: callbacks.rs  commands.rs  inline.rs  messages.rs  mod.rs
src/models/: db.rs  mod.rs  user_state.rs
src/utils/: emojis.rs  encoder.rs  file_id_decoder.rs  mod.rs
