[package]
name = "emoji-encoder-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
bson = { version = "3.0.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.28"
mongodb = "3"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
teloxide = { version = "0.17.0", features = ["macros"] }
thiserror = "2.0.17"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync"] }
